# Incremental-map-based-semantic-segmentation

./: README.md  make_pointclouds.py
Network Framework/: PALNet.py  data_preperation.py  get_predictions.py  main.py  train.py
Network Framework/misc/: test_net.py
Network Framework/tools/: data_management.py  make_load_npy_data.py  network_functions.py  testing_functions.py
point_cloud_to_voxblox_ros/: CMakeLists.txt  package.xml
point_cloud_to_voxblox_ros/src/: camera_poses_flat.csv  main.cpp  point_cloud_to_voxel.launch
