<?xml version="1.0"?>
<package format="2">
    <name>point_cloud_to_voxblox_ros</name>
    <version>0.0.0</version>
    <description>From pointcloud to voxel. </description>

    <author email="patakiz@student.ethz.ch">Zador Pataki</author>
    <maintainer email="patakiz@student.ethz.ch">Zador Pataki</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>rospy</depend>
    <depend>roscpp</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>

    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>rosgraph_msgs</depend>

    <depend>tf2_ros</depend>
    <depend>eigen_catkin</depend>
    <depend>glog_catkin</depend>
    <depend>gflags_catkin</depend>
    <depend>protobuf_catkin</depend>

    <depend>voxblox</depend>
    <depend>voxblox_ros</depend>

    <depend>pcl_catkin</depend>
    <depend>catkin_boost_python_buildtool</depend>

    <export>
    </export>
</package>
